# src/controllers/requestApplicantController.js
@@ -12,8 +12,8 @@ exports.createRequestApplicant= async (req, res) => {
         schema: {
             "request_idx": 1,
             "user_idx": 2,
-            "applicant_state": "승인"
-            "applicant_intro": "안녕하십니까".
+            "applicant_state": "대기",
+            "applicant_intro": "안녕하십니까"
         }
     }
     */
@@ -52,8 +52,8 @@ exports.updateRequestApplicant = async (req, res) => {
         schema: {
             "request_idx": 1,
             "user_idx": 2,
-            "applicant_state": "대기"
-            "applicant_intro": "한곡 뽑아보겠습니다!".
+            "applicant_state": "대기",
+            "applicant_intro": "한곡 뽑아보겠습니다!"
         }
     }
     */
